fininsh desktop UI

--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -1,8 +1,10 @@
 .sidebar {
     min-width: 150px;
-    height: 100vh;
 
     background-color: #191718;
+
+    position: fixed;
+    height: 100%;
 }
 
 .options {
