--- a/src/components/Container.module.scss
+++ b/src/components/Container.module.scss
@@ -1,3 +1,10 @@
 .container {
     padding: 0 129px;
 }
+
+// Tablet
+@media screen and (max-width: 1366px) {
+    .container {
+        padding: 16px;
+    }
+}
