--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -10,3 +10,11 @@
         color: #3e3e3e;
     }
 }
+
+// Tablet
+@media screen and (max-width: 1366px) {
+    .footer p {
+        padding-left: 0;
+        text-align: center;
+    }
+}
