--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -2,3 +2,17 @@
     flex: 1;
     margin-left: 150px;
 }
+
+// Small Tablet
+@media screen and (max-width: 767px) {
+    .main {
+        margin-left: 0;
+    }
+}
+
+// Mobile
+@media screen and (max-width: 480px) {
+    .main {
+        margin-left: 0;
+    }
+}
