--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -4,6 +4,9 @@
     background-color: #191718;
 
     position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
     height: 100%;
 }
 
@@ -37,5 +40,21 @@
         & a {
             color: #ffffff;
         }
+    }
+}
+
+// Small Tablet
+@media screen and (max-width: 767px) {
+    .sidebar {
+        transform: translateX(-100%);
+        width: 200px;
+    }
+}
+
+// Mobile
+@media screen and (max-width: 480px) {
+    .sidebar {
+        transform: translateX(-100%);
+        width: 200px;
     }
 }
