--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -1,3 +1,18 @@
 .active {
     color: #ffffff !important;
 }
+
+// Tablet --> Mobile
+@media screen and (max-width: 767px) {
+    .show {
+        transform: translateX(0px);
+
+        transition: transform 0.5s ease-in-out;
+    }
+
+    .hide {
+        transform: translateX(-100%);
+
+        transition: transform 0.5s ease-in-out;
+    }
+}
